creating mappers for handling responses